fix partner slider flex on mobile

--- a/krimiplzen/assets/styles/components/article-list/partner-slider.scss
+++ b/krimiplzen/assets/styles/components/article-list/partner-slider.scss
@@ -42,7 +42,7 @@ $partner-count: 7;
         }
 
         &-text {
-            flex: 1 0 auto;
+            flex: 1 0;
             font-size: 0.8em;
             padding: $spacing / 2 $spacing;
             width: calc(100% - 8em);
